--- a/src/main/resources/templates/admin/cs/notice/write.html
+++ b/src/main/resources/templates/admin/cs/notice/write.html
@@ -25,9 +25,9 @@
             <td>문의유형</td>
             <td>
               <select name="qnaCate" onchange="firstOption()">
-                <productOption>유형선택</productOption>
-                <productOption value="info">안내</productOption>
-                <productOption value="presentation">발표</productOption>
+                <Option>유형선택</Option>
+                <Option value="info">안내</Option>
+                <Option value="presentation">발표</Option>
               </select>
             </td>
           </tr>
