나의정보 쿠폰, 관리자 쿠폰 출력

--- a/src/main/resources/static/css/my/coupon.css
+++ b/src/main/resources/static/css/my/coupon.css
@@ -180,6 +180,7 @@ table.widthtable tr:last-child td {
     letter-spacing: 3px;
     word-spacing: 2px;
     padding-bottom: 8px;
+    padding-top: 40px;
 }
 
 /* 페이징 */
