--- a/src/main/resources/templates/myPage/content/coupon.html
+++ b/src/main/resources/templates/myPage/content/coupon.html
@@ -1,3 +1,11 @@
+<!--
+    날짜 : 2024/10/21
+    이름 : 김소희
+    내용 : 다운로드한 쿠폰
+
+    수정이력
+    - 2024/11/01 이도영 - 다운로드한 쿠폰 출력 기능
+-->
 <!DOCTYPE html>
 <html
   xmlns="http://www.w3.org/1999/xhtml"
@@ -23,26 +31,38 @@
       <table border="0" class="widthtable">
         <tr>
           <th>쿠폰명</th>
-          <th>할인금액</th>
-          <th>적용기준/제한조건</th>
+          <th>할인정보</th>
+          <th>이용상점</th>
           <th>상태</th>
           <th>유효기간</th>
         </tr>
-        <tr>
-          <td>1 만원 할인 중복 쿠폰</td>
-          <td>10,000원</td>
-          <td>10,000 원 이상 구매시</td>
-          <td>사용가능</td>
-          <td>~ 12/31</td>
+        <tr th:if="${coupons == null}">
+          <td colspan="5" class="td_first" style="width: 100%">등록된 쿠폰이 없습니다.</td>
         </tr>
-        <tr>
-          <td>1 만원 할인 중복 쿠폰</td>
-          <td>10,000원</td>
-          <td>10,000 원 이상 구매시</td>
+        <tr th:each="coupon : ${coupons.content}" th:if="${coupons != null}">
+          <td>[[${coupon.couponName}]]</td>
+          <td>
+            <th:block th:switch="${coupon.couponDiscount}">
+              <span th:case="1">1000원 할인</span>
+              <span th:case="2">2000원 할인</span>
+              <span th:case="3">3000원 할인</span>
+              <span th:case="4">4000원 할인</span>
+              <span th:case="5">5000원 할인</span>
+              <span th:case="6">10% 할인</span>
+              <span th:case="7">20% 할인</span>
+              <span th:case="8">30% 할인</span>
+              <span th:case="9">40% 할인</span>
+              <span th:case="10">50% 할인</span>
+              <span th:case="11">배송비 무료</span>
+              <span th:case="*">할인 없음</span> <!-- 기본값 -->
+            </th:block>
+          </td>
+          <td>[[${coupon.shopName}]]</td>
           <td>사용가능</td>
-          <td>~ 12/31</td>
+          <td>[[${coupon.couponExpireDateFormatted}]]</td>
         </tr>
       </table>
+
 
       <div class="couponinfo">
         <tr>
