--- a/src/main/resources/templates/myPage/include/mypagenav.html
+++ b/src/main/resources/templates/myPage/include/mypagenav.html
@@ -1,9 +1,17 @@
+<!--
+    날짜 : 2024/10/30
+    이름 : 이도영(최초 작성자)
+    내용 : mypagenave 생성
+
+    수정내용
+    - 2024/11/01 쿠폰 경로 수정
+-->
 <nav class="myinfotopside" th:fragment="nav">
     <div>
         <a th:href="@{/myPage/home}" class="shopping-info">나의쇼핑정보</a>
         <ol>
             <li><a th:href="@{/myPage/ordered}">주문<br><span>2</span></a></li>
-            <li><a th:href="@{/myPage/coupon}">쿠폰<br><span>1</span></a></li>
+            <li><a th:href="@{/myPage/coupon/{uid}(uid=${uid})}">쿠폰<br><span>1</span></a></li>
             <li><a th:href="@{/myPage/point}">포인트<br><span>1,000</span></a></li>
             <li><a th:href="@{/myPage/qna}">문의<br><span>1</span></a></li>
         </ol>
