--- a/src/main/resources/templates/admin/order/list.html
+++ b/src/main/resources/templates/admin/order/list.html
@@ -14,6 +14,7 @@
 <th:block layout:fragment="script">
     <script type="text/javascript" th:src="@{/js/admin/config/info.js}"></script>
     <script type="text/javascript" th:src="@{/js/modal/modal.js}"></script>
+    <script type="text/javascript" th:src="@{/js/admin/order/list.js}"></script>
 </th:block>
 
 <div class="content" layout:fragment="content">
@@ -80,18 +81,18 @@
                 <div class="pagingList">
                     <!-- 이전 버튼 -->
                     <th:block th:if="${orders.prev}">
-                        <a th:href="@{/admin/order/order(pg=${orders.pg - 1})}" class="prev">←</a>
+                        <a th:href="@{/admin/order/list(pg=${orders.pg - 1})}" class="prev">←</a>
                     </th:block>
 
                     <!-- 페이지 링크 -->
                     <th:block th:each="num : ${#numbers.sequence(orders.start, orders.end)}">
-                        <a th:href="@{/admin/order/orders(pg=${num})}" th:text="${num}"
+                        <a th:href="@{/admin/order/list(pg=${num})}" th:text="${num}"
                            th:classappend="${orders.pg == num} ? 'active'"></a>
                     </th:block>
 
                     <!-- 다음 버튼 -->
                     <th:block th:if="${orders.next}">
-                        <a th:href="@{/admin/order/order(pg=${orders.pg + 1})}" class="next">></a>
+                        <a th:href="@{/admin/order/list(pg=${orders.pg + 1})}" class="next">></a>
                     </th:block>
                 </div>
             </div>
