--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -41,8 +41,8 @@
                     CART
                 </a>
             </div>
-            <form class="search" action="/lotteon/product/search" method="get">
-                <input class="search__input" type="text" name="keyword"/>
+            <form class="search" action="/product/list" method="get">
+                <input class="search__input" type="text" name="keyword" th:value="${keyword}" />
                 <!-- <input  type="hidden" name="cateCode" id="cateCodeInput" value=""> -->
                 <button class="search__btn"><img width="18" class="search__btn__img" src="/static/images/search.svg" th:src="@{/images/search.svg}" /></button>
             </form>
