--- a/src/main/resources/static/css/my/modal.css
+++ b/src/main/resources/static/css/my/modal.css
@@ -509,6 +509,19 @@
     text-align: center;
     width: 100%;
 }
+.save-button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #f00;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    text-align: center;
+    width: 100%;
+}
 .new-delivery-header {
     border-top: 1px solid black;
     display: flex;
