--- a/src/main/resources/templates/product/view.html
+++ b/src/main/resources/templates/product/view.html
@@ -5,6 +5,7 @@
 
     - 수정내역
     - tymeleaf 레이아웃 적용 (10/28 준혁)
+    - 쿠폰 다운로드 모달 적용 (11/03 도영)
 -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
@@ -17,17 +18,20 @@
     <link rel="stylesheet" th:href="@{/css/include/reset.css}">
     <link rel="stylesheet" th:href="@{/css/product/product.css}">
     <link rel="stylesheet" th:href="@{/css/product/view.css}">
+    <link rel="stylesheet" th:href="@{/css/my/modal.css}">
 </th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+    <script type="text/javascript" th:src="@{/js/modal/modal.js}"></script>
     <script type="text/javascript" th:src="@{/js/util.js}"></script>
     <script type="text/javascript" th:src="@{/js/product/view.js}"></script>
+
     <script src="https://kit.fontawesome.com/63c07008cd.js" crossorigin="anonymous"></script>
 </th:block>
 
 <section class="section" layout:fragment="content">
-
+    <div th:replace="~{layout/modal :: #couponinfoModal}"></div>
     <nav class="section__nav navsticky">
         <h1>상품보기</h1>
         <p>
@@ -41,6 +45,7 @@
 
     <!-- 상품 전체 정보 내용 -->
     <article class="info">
+
         <div class="image">
             <img th:src="'/'+${appInfo.uploadDir}+'product/'+${product.productImg2}" alt="상품이미지" />
         </div>
@@ -72,7 +77,7 @@
                     </div>
                     <ins id="disPrice" class="dis_price">[[${product.discountedPrice}]] 원</ins> <!-- 최종 가격 -->
                 </div>
-                <button class="coupon-button"><i class="fa-solid fa-tag"></i> 쿠폰 받기</button>
+                <button class="coupon-button" data-modal="couponinfoModal"><i class="fa-solid fa-tag"></i> 쿠폰 받기</button>
             </nav>
 
             <h4 class="section-title">혜택 정보</h4>
